==> adafruit/circuitpython/ports/silabs/supervisor/port.c <==
#include "supervisor/background_callback.h"
#include "supervisor/board.h"
#include "supervisor/port.h"
#include "shared/timeutils/timeutils.h"
#include "common-hal/microcontroller/Pin.h"
#include "shared-bindings/microcontroller/__init__.h"
#include "common-hal/audiopwmio/PWMAudioOut.h"
#include "common-hal/busio/I2C.h"
#include "common-hal/busio/SPI.h"
#include "common-hal/busio/UART.h"
#include "common-hal/pulseio/PulseOut.h"
#include "common-hal/pulseio/PulseIn.h"
#include "common-hal/pwmio/PWMOut.h"
#include "peripherals/timers.h"
#include "common-hal/sdioio/SDCard.h"
#include "peripherals/exti.h"
#include "common-hal/alarm/__init__.h"
#include "shared-bindings/rtc/__init__.h"
#include "common-hal/analogio/AnalogOut.h"
#include "common-hal/_bleio/__init__.h"
#include <cmsis_os2.h>
#include "em_chip.h"
#include "sl_cmsis_os2_common.h"
#include "sl_component_catalog.h"
#include "sl_sleeptimer.h"
#include "sl_system_init.h"
#include "sl_system_kernel.h"
#include "sl_power_manager.h"
#define SL_CIRCUITPYTHON_TASK_STACK_EXTRA_SIZE (32)
#define SL_CIRCUITPYTHON_TASK_PRIORITY (40)
#define HEAP_SIZE (88 * 1024)

safe_mode_t port_init(void) {
    #if defined(SL_CATALOG_KERNEL_PRESENT)

    if (!isSchedulerStarted) {
        _sbss = __bss_start__;
        _ebss = __bss_end__;

        isSchedulerStarted = true;
        // Initialize Silicon Labs device, system, service(s) and protocol stack(s).
        // Note that if the kernel is present, processing task(s) will be created by
        // this call.
        sl_system_init();
        // Create thread for Bluetooth stack
        if (tid_thread_circuitpython == NULL) {
            tid_thread_circuitpython = osThreadNew(circuitpython_thread,
                NULL,
                &thread_circuitpython_attr);
        }
        if (tid_thread_circuitpython == NULL) {
            for (;;) {
            }
        }
        // Start the kernel. Task(s) created in app_init() will start running.
        sl_system_kernel_start();
    }

    #endif // SL_CATALOG_KERNEL_PRESENT

    if (heap == NULL) {
        heap = malloc(HEAP_SIZE);
        heap_size = HEAP_SIZE / sizeof(uint32_t);
    }
    if (heap == NULL) {
        return SAFE_MODE_NO_HEAP;
    }
    return SAFE_MODE_NONE;
}

void reset_port(void) {
    reset_all_pins();

    #if CIRCUITPY_BUSIO
    i2c_reset();
    spi_reset();
    uart_reset();
    #endif

    #if CIRCUITPY_PWMIO
    pwmout_reset();
    #endif

    #if CIRCUITPY_ANALOGIO
    analogout_reset();
    #endif

    #if CIRCUITPY_BLEIO
    bleio_reset();
    #endif
}

uint64_t port_get_raw_ticks(uint8_t *subticks) {
    uint32_t timer_freq = sl_sleeptimer_get_timer_frequency();
    uint64_t all_subticks = (uint64_t)(sl_sleeptimer_get_tick_count()) * 1024;
    if (subticks != NULL) {
        *subticks = all_subticks % timer_freq;
    }
    return all_subticks / timer_freq;
}

void port_enable_tick(void) {
    uint32_t timer_freq = sl_sleeptimer_get_timer_frequency();

    // Create timer for waking up the system periodically.
    sl_sleeptimer_start_periodic_timer(&_tick_timer,
        timer_freq / 1024,
        on_tick_timer_timeout, NULL,
        0,
        SL_SLEEPTIMER_NO_HIGH_PRECISION_HF_CLOCKS_REQUIRED_FLAG);
}

void port_disable_tick(void) {
    sl_sleeptimer_stop_timer(&_tick_timer);
}

void port_interrupt_after_ticks(uint32_t ticks) {
    uint32_t timer_freq = sl_sleeptimer_get_timer_frequency();

    uint32_t timer_tick = (uint32_t)((((uint64_t)ticks * timer_freq) + 1023) / 1024u);

    // Create one-shot timer for waking up the system.
    sl_sleeptimer_start_timer(&_sleep_timer,
        timer_tick,
        on_sleep_timer_timeout, NULL,
        0,
        SL_SLEEPTIMER_NO_HIGH_PRECISION_HF_CLOCKS_REQUIRED_FLAG);
}

void port_idle_until_interrupt(void) {
    if (!background_callback_pending()) {
        osThreadFlagsWait(0x0001, osFlagsWaitAny, osWaitForever);
    }
}
